objects/QIDC__OM_Code_Mapping_ims__c.object
<CustomObject>
    <description>This object holds the mapping information between the OrgManager code to the SF picklist values.</description>
    <fields>
        <fullName>QIDC__Code_ims__c</fullName>
        <description>OrgManager code that will be mapped to the Salesforce picklist value.</description>
        <inlineHelpText>OrgManger code that will be mapped to the Salesforce picklist value.</inlineHelpText>
        <label>OrgManager Code</label>
        <referenceTo>QIDC__OM_Code_ims__c</referenceTo>
        <relationshipLabel>OrgManager Code Mappings</relationshipLabel>
        <relationshipName>OrgManager_Code_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__OM_Field_Mapping_ims__c</fullName>
        <description>The field ID which this code is mapped to.</description>
        <inlineHelpText>The field ID which this code is mapped to.</inlineHelpText>
        <label>OrgManager Field Mapping</label>
        <referenceTo>QIDC__OM_Field_Mapping_ims__c</referenceTo>
        <relationshipLabel>OrgManager Code Mappings</relationshipLabel>
        <relationshipName>OrgManager_Code_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__Picklist_Value_ims__c</fullName>
        <description>The Salesforce picklist value that is mapped to the OrgManager code.</description>
        <inlineHelpText>The Salesforce picklist value that is mapped to the OrgManager code.</inlineHelpText>
        <label>Picklist Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Record_Type_Name_ims__c</fullName>
        <description>Developer name of the record type to map with the OrgManager code.</description>
        <inlineHelpText>Developer name of the record type to map with the OrgManager code.</inlineHelpText>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>OrgManager Code Mapping</label>
    <nameField>
        <label>OrgManager Code Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgManager Code Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>